--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ nav {
   font-size: 1.4rem;
   cursor: pointer;
 }
-/* ==========================End of nav===================  */
+/* ==========================End Nav===================  */
 /* =================Header Section===================  */
 
 header {
@@ -210,18 +210,12 @@ header {
   place-items: center;
   min-height: 100vh;
   /* z-index: 1; */
-  /* padding-bottom:10rem; */
-  /* padding bootom not in tutorial */
-
-  /* after min height -(time -- 54.00)*/
 }
 .header__container {
   margin-top: 7rem;
-  /* (in tutorial margin-top:3 rem;) time:54.18*/
   position: relative;
 }
 .header__image {
-  /* top:5rem; */
   width: 14rem;
   aspect-ratio: 3/4;
   overflow: hidden;
@@ -276,7 +270,8 @@ header {
   transform: translate(-0.5rem);
 }
 /* =================Header Section END===================  */
-/* start about section */
+
+/* ==========start about section====== */
 .about__container {
   display: grid;
   grid-template-columns: 2fr 3fr;
@@ -338,8 +333,9 @@ header {
 .about__details .btn i {
   font-size: 1.2rem;
 }
-/* End about section */
-/* start services section */
+/* ======End about section======== */
+
+/* ============start services section=========== */
 .services__container {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -456,7 +452,7 @@ li.mixitup-control-active {
   margin-bottom: 1rem;
 }
 
-/* ==============Testimonials */
+/* ==============Testimonial=========== */
 .swiper {
   width: var(--container-width-lg);
   margin: 9rem auto;
@@ -496,17 +492,16 @@ li.mixitup-control-active {
 .swiper-pagination-bullet {
   background: var(--color-primary);
 }
-/* CONTACT SECTION */
+/* ================CONTACT SECTION============== */
 section.contact {
   background: var(--color-primary);
 }
 .contact__container {
   width: 50%;
-  /* in tutorial display:flex; */
+
   display: grid;
   grid-template-columns: 1fr 9fr;
   gap: 6rem;
-  /* overflow: hidden; */
 }
 .contact__list {
   display: flex;
@@ -519,6 +514,7 @@ section.contact {
   display: block;
   text-align: center;
   color: var(--color-gray-900);
+  /*   */
   border-radius: var(--radius-3);
   font-size: 1.6rem;
   transition: var(--transition);
@@ -536,23 +532,23 @@ section.contact {
 .contact__form input,
 .contact__form textarea {
   background: transparent;
-  border: 1px solid var(--color-gray-300);
+  border: 1px solid white;
   border-radius: var(--radius-3);
   padding: 1rem;
-  color: var(--color-gray-100);
+  color: white;
 
   resize: none;
 }
 .contact__form input::placeholder,
 .contact__form textarea::placeholder {
-  color: var(--color-gray-100);
+  color: white;
 }
 
 .contact__form .btn {
   background: var(--color-gray-100);
   color: var(--color-gray-900);
 }
-/* END CONTACT */
+/* =======END CONTACT========= */
 
 /* =======START FOOTER======= */
 footer {
