--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ header {
 }
 .about__image {
   border: 1rem solid var(--color-gray-100);
+  background-size: cover;
   height: fit-content;
   max-height: 35rem;
   overflow: hidden;
